<resources>
    <string name="app_name">Library_manager</string>
    <string name="Description">Descrption</string>
    <string name="language">Language</string>
    <string name="page_number">Page number</string>
    <string name="Year_published">Year published</string>
    <string name="genre">Genre</string>
    <string name="author_of_book">Author of book</string>
    <string name="title_of_book">Title of book</string>
    <string name="textview">Title</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="titleOfBook">Title</string>
    <string name="authorOfBook">Author</string>
    <string name="titleDisplay">Title</string>
    <string name="authorDisplay">Author</string>
    <string name="Search">Search</string>
    <string name="search">Search</string>
</resources>